<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Grade Manager</string>
    <string name="subject_name">Subject:</string>
    <string name="grade_name">Grade:</string>
    <string name="grades">Grades</string>
    <string name="values">Values</string>
    <string name="formula">Formula:</string>
    <string name="select_integrated_school">Select formula from integrated school</string>
    <string name="finish_button">Finish</string>
    <string name="choose_subject">Choose subject</string>
    <string name="add_formula">Add formula</string>
    <string name="edit_formula">Edit formula</string>
    <string name="cancel">Cancel</string>
    <string name="predict_grade_value">Predict this grade value</string>
    <string name="wished_average">Wished average:</string>
    <string name="format_grade_value" formatted="false">The value of %s should be %s!</string>

    <!-- Activity labels -->
    <string name="activity_new_subject">New subject</string>
    <string name="activity_choose_formula">Choose a formula</string>
    <string name="activity_choose_subject">Choose a subject</string>
    <string name="activity_grade_list">Grade List</string>

    <!-- Hints -->
    <string name="hint_search_school">School/Country/City</string>

    <!-- Menu actions -->
    <string name="action_add_subject">Add subject</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>

    <!-- Array for context menu's -->
    <string-array name="options_subject_menu">
        <item>Edit</item>
        <item>Delete</item>
    </string-array>

    <!-- Toasts -->
    <string name="toast_subject_required">The subject id is a required field!</string>
    <string name="toast_no_grades">Not valid, since there are no grades!</string>
    <string name="toast_invalid_formula">The formula could not be parsed!</string>
    <string name="toast_invalid_subject">Subject name already in use!</string>

    <!-- Country names used in schools.json -->
    <string name="country_holland">The Netherlands</string>

    <!-- Subjects used in IntegratedSchool.ClassLevel -->
    <string name="subject_geography">Geography</string>
    <string name="subject_natural_sciences">Natural sciences</string>
    <string name="subject_sports">Sports</string>
    <string name="subject_biology">Biology</string>
    <string name="subject_german">German</string>
    <string name="subject_economics">Economics</string>
    <string name="subject_english">English</string>
    <string name="subject_french">French</string>
    <string name="subject_history">History</string>
    <string name="subject_greek">Greek</string>
    <string name="subject_informatics">Informatics</string>
    <string name="subject_art">Art</string>
    <string name="subject_music">Music</string>
    <string name="subject_latin">Latin</string>
    <string name="subject_philosophy">Philosophy</string>
    <string name="subject_sociology">Sociology</string>
    <string name="subject_science">Science</string>
    <string name="subject_organisation_management">M&amp;O</string>
    <string name="subject_chemistry">Chemistry</string>
    <string name="subject_physics">Physics</string>
    <string name="subject_dutch">Dutch</string>
    <string name="subject_mathematics">Mathematics</string>
    <string name="subject_mathematics_a">Mathematics A</string>
    <string name="subject_mathematics_b">Mathematics B</string>
    <string name="subject_mathematics_c">Mathematics C</string>
    <string name="subject_mathematics_d">Mathematics D</string>

</resources>
